--- a/charts/sptribs-case-api/values.yaml
+++ b/charts/sptribs-case-api/values.yaml
@@ -61,6 +61,8 @@ java:
           alias: IDAM_SYSTEM_UPDATE_USERNAME
         - name: idam-systemupdate-password
           alias: IDAM_SYSTEM_UPDATE_PASSWORD
+        - name: ccd-case-events-sendonly-connection-string
+          alias: AZURE_SERVICE_BUS_CONNECTION_STRING
   environment:
     S2S_URL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     FEE_API_URL: http://fees-register-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
