--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -32,6 +32,8 @@ java:
           alias: IDAM_SYSTEM_UPDATE_PASSWORD
         - name: launchdarkly-sdk-key
           alias: LAUNCH_DARKLY_SDK_KEY
+        - name: ccd-case-events-sendonly-connection-string
+          alias: AZURE_SERVICE_BUS_CONNECTION_STRING
   secrets:
     POSTGRES_PASSWORD:
       secretRef: postgres
