--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -1,4 +1,8 @@
 java:
+  secrets:
+    AZURE_SERVICE_BUS_PREVIEW_CONNECTION_STRING:
+      secretRef: sptribs-sb-preview
+      key: connectionString
   environment:
     SPRING_JMS_SERVICEBUS_ENABLED: true
     AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
