--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,6 +57,7 @@ azure:
     ccd-case-events:
       topic-name: ${AZURE_SERVICE_BUS_TOPIC_NAME:sptribs-asb-ccd-case-events}
       subscription-name: ${AZURE_SERVICE_BUS_SUBSCRIPTION_NAME:sptribs-asb-ccd-case-events}
+      preview-connection-string: ${AZURE_SERVICE_BUS_PREVIEW_CONNECTION_STRING:dummy}
 
 uk:
   gov:
