--- a/build.gradle
+++ b/build.gradle
@@ -355,6 +355,8 @@ dependencies {
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.2'
   implementation 'org.camunda.bpm:camunda-external-task-client:7.23.0'
   implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-servicebus-jms', version: '5.23.0'
+  // https://mvnrepository.com/artifact/com.azure/azure-messaging-servicebus
+  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.17.14'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all'
