--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -5,8 +5,8 @@ java:
       key: connectionString
   environment:
     SPRING_JMS_SERVICEBUS_ENABLED: true
-    AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
-    AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+    AZURE_SERVICE_BUS_TOPIC_NAME: ccd-case-events
+    AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ccd-case-events
     AZURE_SERVICE_BUS_URL: sptribs-sb-preview.servicebus.windows.net
 
 servicebus:
@@ -61,9 +61,9 @@ wa:
           secretRef: sptribs-sb-preview
           key: connectionString
       environment:
-        AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
-        AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
-        AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+        AZURE_SERVICE_BUS_TOPIC_NAME: ccd-case-events
+        AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ccd-case-events
+        AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ccd-case-events
 
   wa-task-management-api:
     java:
@@ -102,21 +102,21 @@ wa:
     postgresql:
       enabled: false
 
-ccd-message-publisher:
-  java:
-    ingressHost: ccd-message-publisher-${SERVICE_FQDN}
-    releaseNameOverride: ${SERVICE_NAME}-ccd-message-publisher
-    keyVaults:
+  ccd-message-publisher:
+    java:
+      ingressHost: ccd-message-publisher-${SERVICE_FQDN}
+      releaseNameOverride: ${SERVICE_NAME}-ccd-message-publisher
+      keyVaults:
       ccd:
         secrets:
           - name: AppInsightsInstrumentationKey
             alias: azure.application-insights.instrumentation-key
-    environment:
-      DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
-      DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
-      DATA_STORE_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
-      DATA_STORE_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
-      CCD_CASE_EVENTS_DESTINATION: "${SERVICE_NAME}-asb-ccd-case-events"
+      environment:
+        DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
+        DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
+        DATA_STORE_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+        DATA_STORE_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
+        CCD_CASE_EVENTS_DESTINATION: "ccd-case-events"
     secrets:
       SERVICE_BUS_CONNECTION_STRING:
         secretRef: sptribs-sb-preview
@@ -187,4 +187,3 @@ xui-webapp:
       SERVICES_WORK_ALLOCATION_TASK_API: http://{{ .Release.Name }}-wa-task-management-api
       SERVICES_ROLE_ASSIGNMENT_MAPPING_API: http://{{ .Release.Name }}-am-org-role-mapping-service
       WA_SUPPORTED_JURISDICTIONS: ST_CIC
-
