--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,8 +53,8 @@ azure:
     instrumentation-key: ${app-insights-instrumentation-key:00000000-0000-0000-0000-000000000000}
   servicebus:
     ccd-case-events:
-      topic-name: ${AZURE_SERVICE_BUS_TOPIC_NAME:ccd-case-events}
-      subscription-name: ${AZURE_SERVICE_BUS_SUBSCRIPTION_NAME:ccd-case-events}
+      topic-name: ${AZURE_SERVICE_BUS_TOPIC_NAME:ccd-case-events-aat}
+      subscription-name: ${AZURE_SERVICE_BUS_SUBSCRIPTION_NAME:ccd-case-events-aat}
       preview-connection-string: ${AZURE_SERVICE_BUS_PREVIEW_CONNECTION_STRING:dummy}
 
 uk:
