--- a/build.gradle
+++ b/build.gradle
@@ -518,6 +518,7 @@ ccd {
 tasks.withType(CftlibExec).configureEach {
   environment 'RSE_LIB_ADDITIONAL_DATABASES', 'sptribs'
   environment 'CCD_DECENTRALISED_CASE-TYPE-SERVICE-URLS_CriminalInjuriesCompensation', 'http://localhost:4013'
+  environment 'SPRING_JMS_SERVICEBUS_ENABLED', 'false'
 }
 
 bootWithCCD {
