--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,9 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.5.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
+  id 'hmcts.ccd.sdk' version '6.0.2'
   id "au.com.dius.pact" version "4.3.10"
-  id 'com.github.hmcts.rse-cft-lib' version '0.20.0-alpha.44'
+  id 'com.github.hmcts.rse-cft-lib' version '0.19.1880'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
