Include decentralised DB schema in preview WA values

--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -35,6 +35,7 @@ postgresql:
       - name: "pr-${CHANGE_ID}-role_assignment"
       - name: "pr-${CHANGE_ID}-user-profile"
       - name: "pr-${CHANGE_ID}-emstitch"
+      - name: "pr-${CHANGE_ID}-sptribs"
       - name: "pr-${CHANGE_ID}-camunda"
       - name: "pr-${CHANGE_ID}-cft_task_db"
       - name: "pr-${CHANGE_ID}-wa_workflow_api"
