--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.5.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
-  id 'hmcts.ccd.sdk' version '6.0.5'
+  id 'hmcts.ccd.sdk' version '6.2.0'
   id "au.com.dius.pact" version "4.3.10"
-  id 'com.github.hmcts.rse-cft-lib' version '0.19.1880'
+  id 'com.github.hmcts.rse-cft-lib' version '0.19.1882'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
@@ -44,6 +44,7 @@ version = '0.0.1'
 ccd {
   configDir = file('ccd-definitions/definitions')
   decentralised = true
+  caseEventServiceBus = true
 }
 
 project.tasks.named("generateCCDConfig") {
@@ -239,7 +240,6 @@ def sonarExclusions = [
   '**/uk/gov/hmcts/sptribs/notification/GetAllTemplatesFromNotify.java',
   '**/uk/gov/hmcts/sptribs/ciccase/model/UserRolesForAccessProfiles.java',
   '**/uk/gov/hmcts/sptribs/common/config/**',
-  '**/uk/gov/hmcts/sptribs/common/servicebus/**'
 ]
 
 sonarqube {
