--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -63,10 +63,10 @@ azure:
       subscription-name: ${AZURE_SERVICE_BUS_SUBSCRIPTION_NAME:ccd-case-events-aat}
       preview-connection-string: ${AZURE_SERVICE_BUS_PREVIEW_CONNECTION_STRING:dummy}
 
-sptribs:
+ccd:
   servicebus:
+    destination: ${CCD_SERVICEBUS_DESTINATION:${AZURE_SERVICE_BUS_TOPIC_NAME:ccd-case-events-aat}}
     scheduler-enabled: ${SPTRIBS_SERVICEBUS_SCHEDULER_ENABLED:false}
-    message-type: ${SPTRIBS_SERVICEBUS_MESSAGE_TYPE:CASE_EVENT}
     batch-size: ${SPTRIBS_SERVICEBUS_BATCH_SIZE:1000}
     published-retention-days: ${SPTRIBS_SERVICEBUS_PUBLISHED_RETENTION_DAYS:7}
     schedule: ${SPTRIBS_SERVICEBUS_SCHEDULE:*/30 * * * * *}
