--- a/build.gradle
+++ b/build.gradle
@@ -343,6 +343,7 @@ dependencies {
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'
+  implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.25.1'
@@ -359,6 +360,7 @@ dependencies {
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.3.0'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.3.0'
+  implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '3.5.3'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.2.1-RELEASE'
   implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.10.2'
   implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0'
