--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -71,6 +71,10 @@ ccd:
     published-retention-days: ${SPTRIBS_SERVICEBUS_PUBLISHED_RETENTION_DAYS:7}
     schedule: ${SPTRIBS_SERVICEBUS_SCHEDULE:*/30 * * * * *}
 
+pdf:
+  api:
+    url: ${PDF_API_URL:http://localhost:5500}
+
 uk:
   gov:
     notify:
