--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -64,3 +64,9 @@ dependencies:
     version: ~0.0.66
     repository: 'oci://hmctspublic.azurecr.io/helm'
     condition: am-org-role-mapping-service.enabled
+  - name: elasticsearch
+    version: 7.17.3
+    repository: 'https://helm.elastic.co'
+  - name: logstash
+    version: 7.17.3
+    repository: 'https://helm.elastic.co'
