--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -9,12 +9,9 @@ java:
     CASE_DATA_STORE_BASEURL: http://{{ .Release.Name }}-ccd-data-store-api
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
-    DB_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs"
-    DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-    DB_USER_NAME: "{{ .Values.global.postgresUsername}}"
-    DB_PORT: 5432
     SPRING_JMS_SERVICEBUS_ENABLED: false
     POSTGRES_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+    POSTGRES_PORT: 5432
     POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
@@ -38,7 +35,7 @@ java:
         - name: launchdarkly-sdk-key
           alias: LAUNCH_DARKLY_SDK_KEY
   secrets:
-    DB_PASSWORD:
+    POSTGRES_PASSWORD:
       secretRef: postgres
       key: PASSWORD
       disabled: false
