--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -7,23 +7,13 @@ spring:
     allow-bean-definition-overriding: true
   autoconfigure:
     exclude:
+      - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
       - com.azure.spring.cloud.autoconfigure.implementation.context.AzureTokenCredentialAutoConfiguration
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-  sql:
-    init:
-      mode: always
-      continue-on-error: true
-      schema-locations:
-        - classpath:db/functional-schema.sql
-      data-locations:
-        - classpath:db/functional-data.sql
   jms:
     servicebus:
       enabled: false
